--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "push-dir": "^0.4.1"
   }
 }
